--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poste Eletrônico</title>
+    <title>Conectando Talentos</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -12,7 +12,7 @@
     <div class="header">
         <nav class="navbar navbar-expand-lg bg-primary-subtle">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Poste Eletrônico</a>
+                <a class="navbar-brand" href="../index.html">Conectando Talentos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
