--- a/pagconstru.html
+++ b/pagconstru.html
@@ -3,52 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poste Eletrônico</title>
+    <title>Conectando Talentos</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 </head>
 <body>
     <div class="header">
         <nav class="navbar navbar-expand-lg bg-primary-subtle">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Poste Eletrônico</a>
+                <a class="navbar-brand" href="index.html">Conectando Talentos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Quem somos?
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./pagconstru.html">Integrantes</a></li>
-                            <li><a class="dropdown-item" href="./sobreprojeto.html">Sobre o projeto</a></li>
-                        </ul>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Quem somos?
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./pagconstru.html">Integrantes</a></li>
+                                <li><a class="dropdown-item" href="./sobreprojeto.html">Sobre o projeto</a></li>
+                            </ul>
+                        </li>
                     </ul>
                     <form class="d-flex" role="button">
                         <div class="dropdown-center cadastro">
                             <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Cadastre-se
+                                Cadastre-se
                             </button>
                             <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="cadastro/cadastro.html">Cadastro Prestador</a></li>
-                              <li><a class="dropdown-item" href="cadastro/cadastroc.html">Cadastro Contratante</a></li>
+                                <li><a class="dropdown-item" href="cadastro/cadastro.html">Cadastro Prestador</a></li>
+                                <li><a class="dropdown-item" href="cadastro/cadastroc.html">Cadastro Contratante</a></li>
                             </ul>
                         </div>
                         <div class="button-divider"></div>
                         <div class="dropstart login">
                             <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Login
+                                Login
                             </button>
                             <ul class="dropdown-menu">
-                              <li><a class="dropdown-item" href="login/login.html">Login Prestador</a></li>
-                              <li><a class="dropdown-item" href="login/loginc.html">Login Contratante</a></li>
+                                <li><a class="dropdown-item" href="login/login.html">Login Prestador</a></li>
+                                <li><a class="dropdown-item" href="login/loginc.html">Login Contratante</a></li>
                             </ul>
                         </div>
                     </form>
@@ -56,16 +55,89 @@
             </div>
         </nav>
     </div>
+
     <div class="content">
         <div class="container">
-            <div class="content-constru">
-                <div class="conteudo">
-                    <h5>Essa página está em reconstrução!! Pedimos perdão por esse erro!</h5>
-                </div>
+            <div class="content-integrantes">
+                <h4 class="text-center my-5">Conheça os Integrantes</h4>
+                <div class="row">
+                    <!-- Integrante 1 -->
+                    <div class="col-md-3 integrante">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>Gabriel Harmony Ferreira Evangelista</strong></h5>
+                                <p class="card-text"><em>Curso: Engenharia da Computação</em></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Integrante 2 -->
+                    <div class="col-md-3 integrante">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>Katilene Aparecida Mendes Dos Santos</strong></h5>
+                                <p class="card-text"><em>Curso: Engenharia da Computação</em></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Integrante 3 -->
+                    <div class="col-md-3 integrante">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>Leandro Alves Moura</strong></h5>
+                                <p class="card-text"><em>Curso: Engenharia da Computação</em></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Integrante 4 -->
+                    <div class="col-md-3 integrante">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>Márcia De Fátima Rocha Fidalgo Dos Santos</strong></h5>
+                                <p class="card-text"><em>Curso: Engenharia da Computação</em></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Integrante 5 -->
+                    <div class="col-md-3 integrante">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>Othoniel Rodrigues</strong></h5>
+                                <p class="card-text"><em>Curso: Engenharia da Computação</em></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Integrante 6 -->
+                    <div class="col-md-3 integrante">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>Paulo José Dos Santos Ferreira Junior</strong></h5>
+                                <p class="card-text"><em>Curso: Engenharia da Computação</em></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Integrante 7 -->
+                    <div class="col-md-3 integrante">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>Ronivaldo Braz Martins</strong></h5>
+                                <p class="card-text"><em>Curso: Engenharia da Computação</em></p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Integrante 8 -->
+                    <div class="col-md-3 integrante">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title"><strong>Vagnum Dias Da Silva</strong></h5>
+                                <p class="card-text"><em>Curso: Engenharia da Computação</em></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
