--- a/app/home.html
+++ b/app/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Poste Eletrônico | Home</title>
+        <title>Conectando Talentos | Home</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="../css/styleSystem.css" rel="stylesheet">
     </head>
@@ -77,7 +77,7 @@
             <div class="content content-sidebar">
                 <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark sidebar">
                     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 text-white text-decoration-none">
-                      <span class="text-span">Poste Eletrônico</span>
+                      <span class="text-span">Conectando Talentos</span>
                     </a>
                     <hr>
                     <ul class="nav nav-pills flex-column mb-auto">
